         (thanks to Eric Morway for giving the final push to include it !)
        o 'gof'   : VE is now included in the computed goodness-of-fit measures
        o 'ggof'  : VE is now included in the computed goodness-of-fit measures
        o 'plot2' : VE is now included in the computed goodness-of-fit measures (when 'leg.gof=TRUE')
        
0.3-3	02-May-2012
        o 'gof'   : added new example and description of the output class (thanks to Kris Jaeger !)
	o 'br2'   : the new example included in version 0.3-2 was improved
        o 'ggof'  : fixed problem with 'ylim' when some elements in 'sim' or 'obs' were NA (the issue was in the 'plot2' function)
	o 'plot2' : fixed problem with 'ylim' when some elements in 'x' or 'y' were NA
	            
0.3-2	07-Oct-2011
	o 'br2'   : fixed documentation error in its formula (thanks to Jan Corluy !), and a new example was added.
	            Its value was already computed in the correct way.
	
0.3-1	14-Sep-2011
	o 'ggof'  : fixed problem when 'ylim' is specified by the user (the issue was in the 'plot2' function)
	o 'plot2' : fixed problem when 'ylim' is specified by the user

0.3-0	01-Sep-2011

	o NAMESPACE created, which leads to reduced dependency on the package hydroTSM.
	o hydroGOF now depends on xts >= 0.8-2 (=> zoo >= 1.7-2), in order to make use of improved plotting capabilities for ts objects.
          The first release of 'xts' after the 0.8-0 (which was set as the default building block for plotting time series in hydroTSM) 
          was the 0.8-2, and appeared on CRAN on August 9th, 2011       
	o now it depends on 'hydroTSM' >= 0.3-0, in order to use the re-written 'drawxaxis/drawTimeAxis' function.	
	o a vignette is now included with the package, in order to illustrate some basic functionality of hydroGOF
	o 'plot2'        : -) better display of time series objects, when 'plot.type' is 'single'.
		              The (nicer) 'plot.xts' function is used instead of the previous 'plot.zoo'.