@@ -1,5 +1,5 @@
 importFrom("hydroTSM", sfreq, vector2zoo, daily2monthly, daily2annual, monthly2annual, drawTimeAxis, fdc, time2season, seasonalfunction)
-importFrom("zoo", is.zoo, coredata, plot.zoo, "time<-", "MATCH")
+#importFrom("zoo", is.zoo, coredata, plot.zoo, "time<-", "merge.zoo", "MATCH")
 importFrom("xts", is.xts, as.xts, plot.xts, .index)
 
 exportPattern("^[^\\.]")
